[gd_scene load_steps=7 format=3 uid="uid://be10m45ekusnb"]

[ext_resource type="Script" path="res://Objects/Player-tank/Player.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://0p68ou8q17kq" path="res://Objects/Player-tank/model/textured/Bottom_tank_blender_player.glb" id="2"]
[ext_resource type="PackedScene" uid="uid://bofmsr1kqp5k3" path="res://Objects/Player-tank/model/textured/tank_top_blender_player.glb" id="3"]
[ext_resource type="AudioStream" uid="uid://bkowlwu5dvchx" path="res://Audio/TANK_Shoot_07_mono.wav" id="4"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(2.58, 2, 4.856)

[sub_resource type="BoxShape3D" id="2"]

[node name="PlayerTank" type="CharacterBody3D"]
script = ExtResource( "1" )

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20.7405, -7.28392e-07)

[node name="CollisionShapeBottom" type="CollisionShape3D" parent="." groups=["player", "tank"]]
shape = SubResource( "1" )

[node name="Bottom_tank" parent="CollisionShapeBottom" instance=ExtResource( "2" )]
transform = Transform3D(-2.18557e-08, 0, 0.5, 0, 0.5, 0, -0.5, 0, -2.18557e-08, 0, -0.365829, 0.311056)

[node name="CollisionShapeTop" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.572825, 0)
shape = SubResource( "2" )

[node name="Top_tank" parent="CollisionShapeTop" instance=ExtResource( "3" )]
transform = Transform3D(-3.0598e-08, 0, 0.7, 0, 0.7, 0, -0.7, 0, -3.0598e-08, 0, 0.00646502, -0.310289)

[node name="BulletGenerator" type="Position3D" parent="CollisionShapeTop/Top_tank"]
transform = Transform3D(-6.24448e-08, 0, -1.42857, 0, 1.42857, 0, 1.42857, 0, -6.24448e-08, 5.41008, -0.239993, -0.00470019)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( "4" )
unit_size = 20.0
